--- a/index.html
+++ b/index.html
@@ -5,66 +5,69 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>La Cápsula</title>
 <style>
-/* Basic Reset */
-*{margin:0;padding:0;box-sizing:border-box;}
-html,body{height:100%;font-family:'Montserrat',Arial,sans-serif;color:#fff;background:#000;overflow-x:hidden;}
-nav{position:fixed;top:0;left:0;width:100%;display:flex;justify-content:space-between;align-items:center;padding:10px 20px;background:rgba(0,0,0,0.6);backdrop-filter:blur(4px);z-index:1000;}
-nav h1{font-size:1.5rem;text-shadow:0 2px 4px rgba(0,0,0,0.6);}
-button.buy{background:#1DE9B6;border:none;padding:10px 20px;font-weight:bold;border-radius:4px;color:#fff;cursor:pointer;box-shadow:0 2px 6px rgba(0,0,0,0.4);transition:background 0.3s;}
-button.buy:hover{background:#19c9a4;}
-#scene{position:relative;height:100vh;width:100%;overflow:hidden;}
-#background{position:absolute;top:0;left:0;width:100%;height:100%;background:radial-gradient(circle at 50% 60%,rgba(255,255,255,0.1),transparent 70%);z-index:0;}
-.particle{position:absolute;border-radius:50%;background:radial-gradient(circle,rgba(180,220,255,0.3),rgba(0,0,255,0) 60%);pointer-events:none;}
-.capsule{position:absolute;border-radius:50%;border:2px solid #fff;width:80px;height:80px;display:flex;align-items:center;justify-content:center;background:radial-gradient(circle at 30% 30%,rgba(255,255,255,0.6),rgba(255,255,255,0.1) 40%,rgba(255,255,255,0.05));box-shadow:0 0 8px rgba(255,255,255,0.3);transition:transform 0.2s;}
-.capsule span{font-size:1.2rem;font-weight:bold;text-shadow:0 1px 3px rgba(0,0,0,0.7);pointer-events:none;}
-.tooltip{position:absolute;padding:8px 12px;background:rgba(0,0,0,0.8);border:1px solid #1DE9B6;border-radius:4px;font-size:0.9rem;pointer-events:none;white-space:pre-line;z-index:1001;}
-#info{padding:80px 20px 40px;font-size:1.1rem;text-align:center;background:#000;}
+/* ----- Reset and Base Styles ----- */
+*,*::before,*::after{box-sizing:border-box;margin:0;padding:0;}
+body{font-family:'Montserrat',Arial,sans-serif;background:#000;color:#fff;overflow-x:hidden;}
+nav{position:fixed;top:0;left:0;width:100%;display:flex;justify-content:space-between;align-items:center;padding:10px 20px;background:rgba(0,0,0,0.6);backdrop-filter:blur(6px);z-index:1000;}
+nav h1{font-size:1.5rem;}
+.btn{background:#1DE9B6;border:none;color:#fff;padding:10px 20px;text-transform:uppercase;font-weight:bold;border-radius:4px;box-shadow:0 2px 6px rgba(0,0,0,0.4);cursor:pointer;transition:background .3s;}
+.btn:hover{background:#1bc9a4;}
+#scene{position:relative;height:100vh;width:100%;overflow:hidden;margin-top:60px;}
+#background{position:absolute;top:0;left:0;width:100%;height:100%;z-index:0;}
+.particle{position:absolute;border-radius:50%;background:radial-gradient(circle,rgba(160,220,255,0.4),rgba(0,0,255,0) 60%);pointer-events:none;}
+.capsule{position:absolute;border-radius:50%;border:2px solid #fff;width:90px;height:90px;display:flex;align-items:center;justify-content:center;background:radial-gradient(circle at 30% 30%,rgba(255,255,255,0.9),rgba(255,255,255,0.1) 40%,rgba(255,255,255,0.05));box-shadow:inset 0 0 12px rgba(255,255,255,0.4),0 2px 6px rgba(0,0,0,0.6);} 
+.capsule::after{content:"";position:absolute;top:5%;left:10%;width:70%;height:70%;border-radius:50%;background:radial-gradient(circle,rgba(255,255,255,0.5),rgba(255,255,255,0) 70%);} 
+.capsule span{z-index:1;font-size:1.2rem;font-weight:bold;text-shadow:0 2px 4px rgba(0,0,0,0.6);pointer-events:none;}
+.tooltip{position:absolute;display:none;padding:8px 12px;background:rgba(0,0,0,0.8);border:1px solid #1DE9B6;border-radius:4px;font-size:0.9rem;white-space:pre-line;pointer-events:none;z-index:1001;}
+#info{text-align:center;padding:80px 20px 40px;background:#000;}
 #info h2{font-size:2rem;margin-bottom:10px;}
-#info p{margin:10px 0;}
-#modal{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.8);display:flex;align-items:center;justify-content:center;z-index:2000;display:none;}
+#info p{margin-bottom:20px;font-size:1.1rem;}
+#modal{position:fixed;top:0;left:0;width:100%;height:100%;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,0.8);z-index:2000;}
 #modal form{background:#111;padding:20px;border-radius:6px;width:90%;max-width:400px;box-shadow:0 0 10px rgba(0,0,0,0.5);}
 #modal label{display:block;margin-top:10px;font-size:0.9rem;}
 #modal input,#modal select{width:100%;padding:8px;margin-top:4px;background:#222;border:1px solid #555;color:#fff;border-radius:4px;}
 #modal button{margin-top:15px;}
-@media(max-width:600px){.capsule{width:60px;height:60px;}}
+@media(max-width:600px){
+ .capsule{width:60px;height:60px;}
+ nav h1{font-size:1.2rem;}
+}
 </style>
 </head>
 <body>
 <nav>
-<h1>La Cápsula</h1>
-<button class="buy">BUY A CAPSULE</button>
+ <h1>La Cápsula</h1>
+ <button class="btn buyBtn">BUY A CAPSULE</button>
 </nav>
 <div id="scene">
-<div id="background"></div>
-<!-- Capsules -->
+ <div id="background"></div>
 </div>
 <section id="info">
-<h2>What is La Cápsula?</h2>
-<p>Be part of a unique digital living artwork. Each capsule is a unique spot in this infinite breathing field.</p>
-<p id="counter">0 / 9 joined</p>
-<button class="buy">BUY A CAPSULE</button>
+ <h2>What is La Cápsula?</h2>
+ <p>Be part of a unique digital living artwork. Each capsule is a unique spot in this infinite breathing field.</p>
+ <p id="counter">0 / 9 joined</p>
+ <button class="btn buyBtn">BUY A CAPSULE</button>
 </section>
 <div id="modal">
-<form id="buyForm">
-<h3>Claim a Capsule</h3>
-<label for="capsuleSelect">Choose Capsule</label>
-<select id="capsuleSelect" required></select>
-<label for="message">Message (max 100 chars)</label>
-<input id="message" maxlength="100" required>
-<label for="url">Link (https, optional)</label>
-<input id="url" pattern="https?://.*">
-<button type="submit" class="buy">Submit</button>
-</form>
+ <form id="buyForm">
+  <h3>Claim a Capsule</h3>
+  <label for="capsuleSelect">Choose Capsule</label>
+  <select id="capsuleSelect" required></select>
+  <label for="message">Message (max 100 chars)</label>
+  <input id="message" maxlength="100" required>
+  <label for="url">Link (https, optional)</label>
+  <input id="url" pattern="https?://.*">
+  <button type="submit" class="btn">Submit</button>
+ </form>
 </div>
 <script>
-/* ----- Data Structures ----- */
-const capsuleData=[];
+/* ----- Data for capsules and particles ----- */
+const capsules=[];
 for(let i=1;i<=9;i++){
- capsuleData.push({id:i,x:Math.random()*600-300,y:Math.random()*400-200,z:Math.random()*600-300,phiX:Math.random()*Math.PI*2,phiY:Math.random()*Math.PI*2,phiZ:Math.random()*Math.PI*2,msg:'',url:'',claimed:false});
+ capsules.push({id:i,x:rand(-300,300),y:rand(-200,200),z:rand(-300,300),phiX:Math.random()*Math.PI*2,phiY:Math.random()*Math.PI*2,phiZ:Math.random()*Math.PI*2,msg:'',url:'',claimed:false,el:null});
 }
 const particles=[];
 for(let i=0;i<20;i++){
- particles.push({el:null,x:Math.random()*window.innerWidth,y:Math.random()*window.innerHeight,amp:50+Math.random()*50,speed:0.2+Math.random()*0.3,phase:Math.random()*Math.PI*2,size:20+Math.random()*30});
+ particles.push({el:null,x:Math.random()*innerWidth,y:Math.random()*innerHeight,amp:30+Math.random()*50,speed:0.1+Math.random()*0.2,phase:Math.random()*Math.PI*2,size:2+Math.random()*3,opacity:0.2+Math.random()*0.3});
 }
 
 /* ----- Elements ----- */
@@ -79,96 +82,93 @@ tooltip.className='tooltip';
 scene.appendChild(tooltip);
 let tooltipTarget=null;
 
-/* ----- Initialize ----- */
+/* ----- Utility ----- */
+function rand(a,b){return Math.random()*(b-a)+a;}
+
 function init(){
- // create particles
  particles.forEach(p=>{
   const d=document.createElement('div');
   d.className='particle';
   d.style.width=d.style.height=p.size+'px';
+  d.style.opacity=p.opacity;
   scene.appendChild(d);p.el=d;
  });
- // create capsules
- capsuleData.forEach(c=>{
+ capsules.forEach(c=>{
   const d=document.createElement('div');
   d.className='capsule';
   const span=document.createElement('span');
-  span.textContent=c.id;d.appendChild(span);
-  scene.appendChild(d);c.el=d;
+  span.textContent=c.id;d.appendChild(span);scene.appendChild(d);c.el=d;
   d.addEventListener('mouseenter',()=>showTooltip(c));
   d.addEventListener('mouseleave',hideTooltip);
-  d.addEventListener('click',(e)=>{showTooltip(c);e.stopPropagation();});
+  d.addEventListener('click',e=>{showTooltip(c);e.stopPropagation();});
  });
  updateSelectOptions();
- document.querySelectorAll('.buy').forEach(btn=>btn.addEventListener('click',openModal));
+ document.querySelectorAll('.buyBtn').forEach(b=>b.addEventListener('click',openModal));
  modal.addEventListener('click',e=>{if(e.target===modal)closeModal();});
  document.body.addEventListener('click',e=>{if(tooltipTarget&&!tooltip.contains(e.target))hideTooltip();});
  form.addEventListener('submit',claimCapsule);
- requestAnimationFrame(animate);
+ requestAnimationFrame(loop);
 }
 
-/* ----- Animation ----- */
-function animate(t){
+/* ----- Animation Loop ----- */
+function loop(t){
  const time=t/1000;
- // particles
  particles.forEach(p=>{
   p.phase+=p.speed*0.01;
   const x=p.x+p.amp*Math.sin(time*p.speed+p.phase);
   const y=p.y+p.amp*Math.cos(time*p.speed+p.phase);
   p.el.style.transform=`translate(${x}px,${y}px)`;
+  p.el.style.opacity=0.2+0.3*Math.sin(time+p.phase);
  });
- // capsules
- capsuleData.forEach(c=>{
+ capsules.forEach(c=>{
   const range=300;
-  c.x+=Math.sin(time*0.2+c.phiX)*0.3;
-  c.y+=Math.cos(time*0.15+c.phiY)*0.3;
-  c.z+=Math.sin(time*0.25+c.phiZ)*0.3;
-  // wrap
-  if(c.x>range) c.x=-range; if(c.x<-range) c.x=range;
-  if(c.y>range) c.y=-range; if(c.y<-range) c.y=range;
-  if(c.z>range) c.z=-range; if(c.z<-range) c.z=range;
+  c.x+=Math.sin(time*0.2+c.phiX)*0.4;
+  c.y+=Math.cos(time*0.18+c.phiY)*0.4;
+  c.z+=Math.sin(time*0.25+c.phiZ)*0.4;
+  if(c.x>range) c.x=-range;if(c.x<-range) c.x=range;
+  if(c.y>range) c.y=-range;if(c.y<-range) c.y=range;
+  if(c.z>range) c.z=-range;if(c.z<-range) c.z=range;
   const scale=1+(c.z/300);
-  c.el.style.transform=`translate(calc(50% + ${c.x}px),calc(50% + ${c.y}px)) scale(${scale})`;
+  const blur=Math.max(0,2-c.z/150);
+  c.el.style.transform=`translate(calc(-50% + ${c.x}px),calc(-50% + ${c.y}px)) scale(${scale})`;
+  c.el.style.filter=`blur(${blur}px)`;
+  c.el.style.zIndex=Math.floor(1000+(c.z*10));
  });
- // background breathing
  const glow=0.5+0.5*Math.sin(time*0.5);
  bg.style.background=`radial-gradient(circle at 50% 60%,rgba(255,255,255,${0.05+glow*0.05}),transparent 70%)`;
- requestAnimationFrame(animate);
+ requestAnimationFrame(loop);
 }
 
-/* ----- Tooltip ----- */
+/* ----- Tooltip Functions ----- */
 function showTooltip(c){
  tooltipTarget=c;
- const rect=c.el.getBoundingClientRect();
+ tooltip.innerHTML=c.claimed?`<strong>Capsule #${c.id}</strong><br>${c.msg}${c.url?`<br><a href="${c.url}" target="_blank">${c.url}</a>`:''}`:`Capsule #${c.id} — Empty`;
  tooltip.style.display='block';
- tooltip.innerHTML=c.claimed?`<strong>Capsule #${c.id}</strong><br>${c.msg}${c.url?`<br><a href="${c.url}" target="_blank">${c.url}</a>`:''}`:`Capsule #${c.id} – Empty`;
- const tooltipRect=tooltip.getBoundingClientRect();
- const top=rect.top-tooltipRect.height-8;
- const left=rect.left+(rect.width-tooltipRect.width)/2;
- tooltip.style.top=`${top}px`;
- tooltip.style.left=`${left}px`;
+ const rect=c.el.getBoundingClientRect();
+ const tipRect=tooltip.getBoundingClientRect();
+ const top=rect.top-tipRect.height-8;
+ const left=rect.left+(rect.width-tipRect.width)/2;
+ tooltip.style.top=top+'px';
+ tooltip.style.left=left+'px';
 }
-function hideTooltip(){
- tooltip.style.display='none';
- tooltipTarget=null;
-}
+function hideTooltip(){tooltip.style.display='none';tooltipTarget=null;}
 
 /* ----- Modal Logic ----- */
 function openModal(){modal.style.display='flex';}
 function closeModal(){modal.style.display='none';form.reset();}
 function updateSelectOptions(){
  select.innerHTML='';
- capsuleData.filter(c=>!c.claimed).forEach(c=>{
+ capsules.filter(c=>!c.claimed).forEach(c=>{
   const op=document.createElement('option');
   op.value=c.id;op.textContent=c.id;select.appendChild(op);
  });
- if(select.options.length===0){select.disabled=true;}
- counter.textContent=`${capsuleData.filter(c=>c.claimed).length} / 9 joined`;
+ select.disabled=select.options.length===0;
+ counter.textContent=`${capsules.filter(c=>c.claimed).length} / 9 joined`;
 }
 function claimCapsule(e){
  e.preventDefault();
  const id=parseInt(select.value,10);
- const cap=capsuleData.find(c=>c.id===id);
+ const cap=capsules.find(c=>c.id===id);
  if(!cap||cap.claimed)return;
  cap.msg=document.getElementById('message').value.trim();
  cap.url=document.getElementById('url').value.trim();
@@ -177,6 +177,7 @@ function claimCapsule(e){
  closeModal();
  if(tooltipTarget===cap)showTooltip(cap);
 }
+
 window.addEventListener('load',init);
 </script>
 </body>
