--- a/index.html
+++ b/index.html
@@ -62,8 +62,27 @@ nav h1{font-size:1.5rem;}
 <script>
 /* ----- Data for capsules and particles ----- */
 const capsules=[];
-for(let i=1;i<=9;i++){
- capsules.push({id:i,x:rand(-300,300),y:rand(-200,200),z:rand(-300,300),phiX:Math.random()*Math.PI*2,phiY:Math.random()*Math.PI*2,phiZ:Math.random()*Math.PI*2,msg:'',url:'',claimed:false,el:null});
+// distribute capsules across the viewport using a loose 3x3 grid
+const w=innerWidth,h=innerHeight;
+const segX=w/3,segY=h/3;
+let id=1;
+for(let row=0;row<3;row++){
+ for(let col=0;col<3;col++){
+  capsules.push({
+   id:id++,
+   // base positions spread across the screen with slight randomness
+   x:segX*(col+0.5)-w/2+rand(-segX/4,segX/4),
+   y:segY*(row+0.5)-h/2+rand(-segY/4,segY/4),
+   z:rand(-300,300),
+   phiX:Math.random()*Math.PI*2,
+   phiY:Math.random()*Math.PI*2,
+   phiZ:Math.random()*Math.PI*2,
+   msg:'',
+   url:'',
+   claimed:false,
+   el:null
+  });
+ }
 }
 const particles=[];
 for(let i=0;i<20;i++){
@@ -121,13 +140,16 @@ function loop(t){
   p.el.style.opacity=0.2+0.3*Math.sin(time+p.phase);
  });
  capsules.forEach(c=>{
-  const range=300;
+  // allow capsules to roam using the full viewport dimensions
+  const rangeX=innerWidth/2;
+  const rangeY=innerHeight/2;
+  const rangeZ=300;
   c.x+=Math.sin(time*0.2+c.phiX)*0.4;
   c.y+=Math.cos(time*0.18+c.phiY)*0.4;
   c.z+=Math.sin(time*0.25+c.phiZ)*0.4;
-  if(c.x>range) c.x=-range;if(c.x<-range) c.x=range;
-  if(c.y>range) c.y=-range;if(c.y<-range) c.y=range;
-  if(c.z>range) c.z=-range;if(c.z<-range) c.z=range;
+  if(c.x>rangeX) c.x=-rangeX;if(c.x<-rangeX) c.x=rangeX;
+  if(c.y>rangeY) c.y=-rangeY;if(c.y<-rangeY) c.y=rangeY;
+  if(c.z>rangeZ) c.z=-rangeZ;if(c.z<-rangeZ) c.z=rangeZ;
   const scale=1+(c.z/300);
   const blur=Math.max(0,2-c.z/150);
   c.el.style.transform=`translate(calc(-50% + ${c.x}px),calc(-50% + ${c.y}px)) scale(${scale})`;
