--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ nav h1{font-size:1.5rem;}
 <section id="info">
  <h2>What is La Cápsula?</h2>
  <p>Be part of a unique digital living artwork. Each capsule is a unique spot in this infinite breathing field.</p>
- <p id="counter">0 / 9 joined</p>
+ <p id="counter">0 / 30 joined</p>
  <button class="btn buyBtn">BUY A CAPSULE</button>
 </section>
 <div id="modal">
@@ -62,21 +62,28 @@ nav h1{font-size:1.5rem;}
 <script>
 /* ----- Data for capsules and particles ----- */
 const capsules=[];
-// distribute capsules across the viewport using a loose 3x3 grid
+// distribute 30 capsules across the viewport using a 6x5 grid
+const cols=5,rows=6;
 const w=innerWidth,h=innerHeight;
-const segX=w/3,segY=h/3;
+const segX=w/cols,segY=h/rows;
 let id=1;
-for(let row=0;row<3;row++){
- for(let col=0;col<3;col++){
+for(let r=0;r<rows;r++){
+ for(let c=0;c<cols;c++){
   capsules.push({
    id:id++,
    // base positions spread across the screen with slight randomness
-   x:segX*(col+0.5)-w/2+rand(-segX/4,segX/4),
-   y:segY*(row+0.5)-h/2+rand(-segY/4,segY/4),
+   x:segX*(c+0.5)-w/2+rand(-segX/3,segX/3),
+   y:segY*(r+0.5)-h/2+rand(-segY/3,segY/3),
    z:rand(-300,300),
-   phiX:Math.random()*Math.PI*2,
-   phiY:Math.random()*Math.PI*2,
-   phiZ:Math.random()*Math.PI*2,
+   phiX:rand(0,Math.PI*2),
+   phiY:rand(0,Math.PI*2),
+   phiZ:rand(0,Math.PI*2),
+   ax:rand(0.3,0.8),
+   ay:rand(0.3,0.8),
+   az:rand(0.3,0.8),
+   fx:rand(0.15,0.35),
+   fy:rand(0.15,0.35),
+   fz:rand(0.15,0.35),
    msg:'',
    url:'',
    claimed:false,
@@ -144,9 +151,9 @@ function loop(t){
   const rangeX=innerWidth/2;
   const rangeY=innerHeight/2;
   const rangeZ=300;
-  c.x+=Math.sin(time*0.2+c.phiX)*0.4;
-  c.y+=Math.cos(time*0.18+c.phiY)*0.4;
-  c.z+=Math.sin(time*0.25+c.phiZ)*0.4;
+  c.x+=Math.sin(time*c.fx+c.phiX)*c.ax;
+  c.y+=Math.cos(time*c.fy+c.phiY)*c.ay;
+  c.z+=Math.sin(time*c.fz+c.phiZ)*c.az;
   if(c.x>rangeX) c.x=-rangeX;if(c.x<-rangeX) c.x=rangeX;
   if(c.y>rangeY) c.y=-rangeY;if(c.y<-rangeY) c.y=rangeY;
   if(c.z>rangeZ) c.z=-rangeZ;if(c.z<-rangeZ) c.z=rangeZ;
@@ -185,7 +192,7 @@ function updateSelectOptions(){
   op.value=c.id;op.textContent=c.id;select.appendChild(op);
  });
  select.disabled=select.options.length===0;
- counter.textContent=`${capsules.filter(c=>c.claimed).length} / 9 joined`;
+ counter.textContent=`${capsules.filter(c=>c.claimed).length} / 30 joined`;
 }
 function claimCapsule(e){
  e.preventDefault();
