--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ nav h1{font-size:1.5rem;}
 #scene{position:relative;height:100vh;width:100%;overflow:hidden;margin-top:60px;}
 #background{position:absolute;top:0;left:0;width:100%;height:100%;z-index:0;}
 .particle{position:absolute;border-radius:50%;background:radial-gradient(circle,rgba(160,220,255,0.4),rgba(0,0,255,0) 60%);pointer-events:none;}
-.capsule{position:absolute;border-radius:50%;border:2px solid #fff;width:90px;height:90px;display:flex;align-items:center;justify-content:center;background:radial-gradient(circle at 30% 30%,rgba(255,255,255,0.9),rgba(255,255,255,0.1) 40%,rgba(255,255,255,0.05));box-shadow:inset 0 0 12px rgba(255,255,255,0.4),0 2px 6px rgba(0,0,0,0.6);} 
+.capsule{position:absolute;border-radius:50%;border:1px solid #fff;width:24px;height:24px;display:flex;align-items:center;justify-content:center;background:radial-gradient(circle at 30% 30%,rgba(255,255,255,0.9),rgba(255,255,255,0.1) 40%,rgba(255,255,255,0.05));box-shadow:inset 0 0 6px rgba(255,255,255,0.4),0 1px 3px rgba(0,0,0,0.6);}
 .capsule::after{content:"";position:absolute;top:5%;left:10%;width:70%;height:70%;border-radius:50%;background:radial-gradient(circle,rgba(255,255,255,0.5),rgba(255,255,255,0) 70%);} 
-.capsule span{z-index:1;font-size:1.2rem;font-weight:bold;text-shadow:0 2px 4px rgba(0,0,0,0.6);pointer-events:none;}
+.capsule span{z-index:1;font-size:0.5rem;font-weight:bold;text-shadow:0 1px 2px rgba(0,0,0,0.6);pointer-events:none;}
 .tooltip{position:absolute;display:none;padding:8px 12px;background:rgba(0,0,0,0.8);border:1px solid #1DE9B6;border-radius:4px;font-size:0.9rem;white-space:pre-line;pointer-events:none;z-index:1001;}
 #info{text-align:center;padding:80px 20px 40px;background:#000;}
 #info h2{font-size:2rem;margin-bottom:10px;}
@@ -28,7 +28,7 @@ nav h1{font-size:1.5rem;}
 #modal input,#modal select{width:100%;padding:8px;margin-top:4px;background:#222;border:1px solid #555;color:#fff;border-radius:4px;}
 #modal button{margin-top:15px;}
 @media(max-width:600px){
- .capsule{width:60px;height:60px;}
+ .capsule{width:16px;height:16px;}
  nav h1{font-size:1.2rem;}
 }
 </style>
@@ -44,7 +44,7 @@ nav h1{font-size:1.5rem;}
 <section id="info">
  <h2>What is La Cápsula?</h2>
  <p>Be part of a unique digital living artwork. Each capsule is a unique spot in this infinite breathing field.</p>
- <p id="counter">0 / 30 joined</p>
+ <p id="counter">0 / 10000 joined</p>
  <button class="btn buyBtn">BUY A CAPSULE</button>
 </section>
 <div id="modal">
@@ -62,32 +62,32 @@ nav h1{font-size:1.5rem;}
 <script>
 /* ----- Data for capsules and particles ----- */
 const capsules=[];
-const rows=5,cols=6;
+const rows=100,cols=100;
 const cellW=90/cols,cellH=80/rows;
 let id=1;
 for(let r=0;r<rows;r++){
   for(let c=0;c<cols;c++){
+    const baseX=5+c*cellW+cellW/2+rand(-cellW*0.4,cellW*0.4);
+    const baseY=10+r*cellH+cellH/2+rand(-cellH*0.4,cellH*0.4);
     capsules.push({
       id:id++,
-      baseX:5+c*cellW+cellW/2+rand(-cellW/4,cellW/4),
-      baseY:10+r*cellH+cellH/2+rand(-cellH/4,cellH/4),
-      amplitudeX:rand(3,7),
-      amplitudeY:rand(2,5),
+      baseX,
+      baseY,
+      amplitudeX:rand(cellW*0.2,cellW*0.4),
+      amplitudeY:rand(cellH*0.2,cellH*0.4),
       phaseX:Math.random()*Math.PI*2,
       phaseY:Math.random()*Math.PI*2,
-      speed:rand(0.1,0.3),
-      baseZ:rand(-120,120),
-      amplitudeZ:rand(40,100),
+      speed:rand(0.05,0.15),
+      baseZ:rand(-800,-200),
+      amplitudeZ:rand(300,800),
       phaseZ:Math.random()*Math.PI*2,
-      speedZ:rand(0.1,0.3),
+      speedZ:rand(0.05,0.15),
       msg:"",
       url:"",
       claimed:false,
       el:null,
       x:0,
-      y:0,
-      offsetX:0,
-      offsetY:0
+      y:0
     });
   }
 }
@@ -150,42 +150,22 @@ function loop(t){
  // calculate capsule positions
  capsules.forEach(c=>{
    const tx=time*c.speed;
-   c.x=c.baseX+Math.sin(tx+c.phaseX)*c.amplitudeX;
-   c.y=c.baseY+Math.cos(tx+c.phaseY)*c.amplitudeY;
-   c.z=c.baseZ+Math.sin(time*c.speedZ+c.phaseZ)*c.amplitudeZ;
-   c.offsetX=0;
-   c.offsetY=0;
- });
+  c.x=c.baseX+Math.sin(tx+c.phaseX)*c.amplitudeX;
+  c.y=c.baseY+Math.cos(tx+c.phaseY)*c.amplitudeY;
+  c.z=c.baseZ+Math.sin(time*c.speedZ+c.phaseZ)*c.amplitudeZ;
+});
 
- // simple repulsion to avoid overlap
- for(let i=0;i<capsules.length;i++){
-   for(let j=i+1;j<capsules.length;j++){
-     const dx=capsules[j].x-capsules[i].x;
-     const dy=capsules[j].y-capsules[i].y;
-     const dist=Math.hypot(dx,dy);
-     const minDist=6;
-     if(dist<minDist){
-       const force=(minDist-dist)/minDist*0.5;
-       const nx=dx/dist||Math.random()-0.5;
-       const ny=dy/dist||Math.random()-0.5;
-       capsules[i].offsetX-=nx*force;
-       capsules[i].offsetY-=ny*force;
-       capsules[j].offsetX+=nx*force;
-       capsules[j].offsetY+=ny*force;
-     }
-   }
- }
 
  capsules.forEach(c=>{
-   const x=c.x+c.offsetX;
-   const y=c.y+c.offsetY;
+   const x=c.x;
+   const y=c.y;
    const z=c.z;
-   const scale=1+(z/300);
-   const blur=Math.max(0,2-z/150);
+   const scale=0.2+(z+1600)/2200;
+   const blur=Math.max(0,(1.2-scale)*2);
    c.el.style.transform=`translate(-50%, -50%) translate(${x}vw, ${y}vh) scale(${scale})`;
    c.el.style.filter=`blur(${blur}px)`;
-   c.el.style.zIndex=Math.floor(1000+(z*10));
- });
+   c.el.style.zIndex=Math.floor(scale*1000);
+});
 
  const glow=0.5+0.5*Math.sin(time*0.5);
  bg.style.background=`radial-gradient(circle at 50% 60%,rgba(255,255,255,${0.05+glow*0.05}),transparent 70%)`;
@@ -216,7 +196,7 @@ function updateSelectOptions(){
   op.value=c.id;op.textContent=c.id;select.appendChild(op);
  });
  select.disabled=select.options.length===0;
- counter.textContent=`${capsules.filter(c=>c.claimed).length} / 30 joined`;
+ counter.textContent=`${capsules.filter(c=>c.claimed).length} / 10000 joined`;
 }
 function claimCapsule(e){
  e.preventDefault();
