Implement rotating 10k bubbles with 9 foreground

--- a/index.html
+++ b/index.html
@@ -5,213 +5,135 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>La Cápsula</title>
 <style>
-/* ----- Reset and Base Styles ----- */
-*,*::before,*::after{box-sizing:border-box;margin:0;padding:0;}
-body{font-family:'Montserrat',Arial,sans-serif;background:#000;color:#fff;overflow-x:hidden;}
-nav{position:fixed;top:0;left:0;width:100%;display:flex;justify-content:space-between;align-items:center;padding:10px 20px;background:rgba(0,0,0,0.6);backdrop-filter:blur(6px);z-index:1000;}
-nav h1{font-size:1.5rem;}
-.btn{background:#1DE9B6;border:none;color:#fff;padding:10px 20px;text-transform:uppercase;font-weight:bold;border-radius:4px;box-shadow:0 2px 6px rgba(0,0,0,0.4);cursor:pointer;transition:background .3s;}
-.btn:hover{background:#1bc9a4;}
-#scene{position:relative;height:100vh;width:100%;overflow:hidden;margin-top:60px;}
-#background{position:absolute;top:0;left:0;width:100%;height:100%;z-index:0;}
-.particle{position:absolute;border-radius:50%;background:radial-gradient(circle,rgba(160,220,255,0.4),rgba(0,0,255,0) 60%);pointer-events:none;}
-.capsule{position:absolute;border-radius:50%;border:1px solid #fff;width:24px;height:24px;display:flex;align-items:center;justify-content:center;background:radial-gradient(circle at 30% 30%,rgba(255,255,255,0.9),rgba(255,255,255,0.1) 40%,rgba(255,255,255,0.05));box-shadow:inset 0 0 6px rgba(255,255,255,0.4),0 1px 3px rgba(0,0,0,0.6);}
-.capsule::after{content:"";position:absolute;top:5%;left:10%;width:70%;height:70%;border-radius:50%;background:radial-gradient(circle,rgba(255,255,255,0.5),rgba(255,255,255,0) 70%);} 
-.capsule span{z-index:1;font-size:0.5rem;font-weight:bold;text-shadow:0 1px 2px rgba(0,0,0,0.6);pointer-events:none;}
-.tooltip{position:absolute;display:none;padding:8px 12px;background:rgba(0,0,0,0.8);border:1px solid #1DE9B6;border-radius:4px;font-size:0.9rem;white-space:pre-line;pointer-events:none;z-index:1001;}
-#info{text-align:center;padding:80px 20px 40px;background:#000;}
-#info h2{font-size:2rem;margin-bottom:10px;}
-#info p{margin-bottom:20px;font-size:1.1rem;}
-#modal{position:fixed;top:0;left:0;width:100%;height:100%;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,0.8);z-index:2000;}
-#modal form{background:#111;padding:20px;border-radius:6px;width:90%;max-width:400px;box-shadow:0 0 10px rgba(0,0,0,0.5);}
-#modal label{display:block;margin-top:10px;font-size:0.9rem;}
-#modal input,#modal select{width:100%;padding:8px;margin-top:4px;background:#222;border:1px solid #555;color:#fff;border-radius:4px;}
-#modal button{margin-top:15px;}
-@media(max-width:600px){
- .capsule{width:16px;height:16px;}
- nav h1{font-size:1.2rem;}
-}
+/* Reset */
+*,*:before,*:after{box-sizing:border-box;margin:0;padding:0;}
+body{font-family:'Montserrat',Arial,sans-serif;background:#000;color:#fff;overflow:hidden;}
+#scene{position:relative;width:100vw;height:100vh;perspective:800px;overflow:hidden;}
+.particle{position:absolute;border-radius:50%;background:rgba(255,255,255,0.3);pointer-events:none;}
+.bubble{position:absolute;border-radius:50%;border:1px solid rgba(255,255,255,0.8);box-shadow:inset 0 0 10px rgba(255,255,255,0.5),0 4px 10px rgba(0,0,0,0.4);overflow:hidden;transform-style:preserve-3d;}
+.bubble img{width:100%;height:100%;object-fit:cover;border-radius:50%;filter:brightness(0.9);pointer-events:none;}
+.bubble::after{content:"";position:absolute;left:15%;top:10%;width:70%;height:70%;border-radius:50%;background:radial-gradient(circle,rgba(255,255,255,0.8),rgba(255,255,255,0) 70%);pointer-events:none;}
+.label{position:absolute;bottom:5%;width:100%;text-align:center;font-size:.7rem;color:#fff;text-shadow:0 1px 2px rgba(0,0,0,0.7);pointer-events:none;}
+.tooltip{position:absolute;padding:8px 12px;background:rgba(0,0,0,0.8);border-radius:4px;font-size:.9rem;display:none;pointer-events:none;z-index:1000;}
 </style>
 </head>
 <body>
-<nav>
- <h1>La Cápsula</h1>
- <button class="btn buyBtn">BUY A CAPSULE</button>
-</nav>
-<div id="scene">
- <div id="background"></div>
-</div>
-<section id="info">
- <h2>What is La Cápsula?</h2>
- <p>Be part of a unique digital living artwork. Each capsule is a unique spot in this infinite breathing field.</p>
- <p id="counter">0 / 10000 joined</p>
- <button class="btn buyBtn">BUY A CAPSULE</button>
-</section>
-<div id="modal">
- <form id="buyForm">
-  <h3>Claim a Capsule</h3>
-  <label for="capsuleSelect">Choose Capsule</label>
-  <select id="capsuleSelect" required></select>
-  <label for="message">Message (max 100 chars)</label>
-  <input id="message" maxlength="100" required>
-  <label for="url">Link (https, optional)</label>
-  <input id="url" pattern="https?://.*">
-  <button type="submit" class="btn">Submit</button>
- </form>
-</div>
+<div id="scene"></div>
+<div class="tooltip" id="tooltip"></div>
 <script>
-/* ----- Data for capsules and particles ----- */
-const capsules=[];
-const rows=100,cols=100;
-const cellW=90/cols,cellH=80/rows;
-let id=1;
-for(let r=0;r<rows;r++){
-  for(let c=0;c<cols;c++){
-    const baseX=5+c*cellW+cellW/2+rand(-cellW*0.4,cellW*0.4);
-    const baseY=10+r*cellH+cellH/2+rand(-cellH*0.4,cellH*0.4);
-    capsules.push({
-      id:id++,
-      baseX,
-      baseY,
-      amplitudeX:rand(cellW*0.2,cellW*0.4),
-      amplitudeY:rand(cellH*0.2,cellH*0.4),
-      phaseX:Math.random()*Math.PI*2,
-      phaseY:Math.random()*Math.PI*2,
-      speed:rand(0.05,0.15),
-      baseZ:rand(-800,-200),
-      amplitudeZ:rand(300,800),
-      phaseZ:Math.random()*Math.PI*2,
-      speedZ:rand(0.05,0.15),
-      msg:"",
-      url:"",
-      claimed:false,
-      el:null,
-      x:0,
-      y:0
-    });
-  }
-}
-const particles=[];
-for(let i=0;i<20;i++){
- particles.push({el:null,x:Math.random()*innerWidth,y:Math.random()*innerHeight,amp:30+Math.random()*50,speed:0.1+Math.random()*0.2,phase:Math.random()*Math.PI*2,size:2+Math.random()*3,opacity:0.2+Math.random()*0.3});
-}
-
-/* ----- Elements ----- */
+const TOTAL=10000;          // total number of bubble data objects
+const FRONT=9;              // number of bubbles shown in front
+let nextIndex=0;            // pointer for next bubble data
+const data=[];              // stores all 10,000 bubble infos
+const slots=[];             // active bubbles in the DOM
+const particles=[];         // background particle effects
 const scene=document.getElementById('scene');
-const bg=document.getElementById('background');
-const counter=document.getElementById('counter');
-const modal=document.getElementById('modal');
-const form=document.getElementById('buyForm');
-const select=document.getElementById('capsuleSelect');
-const tooltip=document.createElement('div');
-tooltip.className='tooltip';
-scene.appendChild(tooltip);
-let tooltipTarget=null;
+const tooltip=document.getElementById('tooltip');
 
-/* ----- Utility ----- */
-function rand(a,b){return Math.random()*(b-a)+a;}
-
-function init(){
- particles.forEach(p=>{
-  const d=document.createElement('div');
-  d.className='particle';
-  d.style.width=d.style.height=p.size+'px';
-  d.style.opacity=p.opacity;
-  scene.appendChild(d);p.el=d;
- });
- capsules.forEach(c=>{
-  const d=document.createElement('div');
-  d.className='capsule';
-  const span=document.createElement('span');
-  span.textContent=c.id;d.appendChild(span);scene.appendChild(d);c.el=d;
-  d.addEventListener('mouseenter',()=>showTooltip(c));
-  d.addEventListener('mouseleave',hideTooltip);
-  d.addEventListener('click',e=>{showTooltip(c);e.stopPropagation();});
- });
- updateSelectOptions();
- document.querySelectorAll('.buyBtn').forEach(b=>b.addEventListener('click',openModal));
- modal.addEventListener('click',e=>{if(e.target===modal)closeModal();});
- document.body.addEventListener('click',e=>{if(tooltipTarget&&!tooltip.contains(e.target))hideTooltip();});
- form.addEventListener('submit',claimCapsule);
- requestAnimationFrame(loop);
+/* Utility functions */
+const rand=(a,b)=>Math.random()*(b-a)+a;
+// generate a tiny svg data URI with unique color based on id
+function makePhoto(id){
+ const hue=(id*137.5)%360;
+ const svg=`<svg xmlns='http://www.w3.org/2000/svg' width='64' height='64'><defs><radialGradient id='g'><stop offset='0%' stop-color='hsl(${hue},70%,90%)'/><stop offset='100%' stop-color='hsl(${hue},70%,60%)'/></radialGradient></defs><rect width='64' height='64' fill='url(#g)'/></svg>`;
+ return 'data:image/svg+xml;base64,'+btoa(svg);
 }
 
-/* ----- Animation Loop ----- */
-function loop(t){
- const time=t/1000;
- particles.forEach(p=>{
-  p.phase+=p.speed*0.01;
-  const x=p.x+p.amp*Math.sin(time*p.speed+p.phase);
-  const y=p.y+p.amp*Math.cos(time*p.speed+p.phase);
-  p.el.style.transform=`translate(${x}px,${y}px)`;
-  p.el.style.opacity=0.2+0.3*Math.sin(time+p.phase);
- });
-
- // calculate capsule positions
- capsules.forEach(c=>{
-   const tx=time*c.speed;
-  c.x=c.baseX+Math.sin(tx+c.phaseX)*c.amplitudeX;
-  c.y=c.baseY+Math.cos(tx+c.phaseY)*c.amplitudeY;
-  c.z=c.baseZ+Math.sin(time*c.speedZ+c.phaseZ)*c.amplitudeZ;
-});
-
-
- capsules.forEach(c=>{
-   const x=c.x;
-   const y=c.y;
-   const z=c.z;
-   const scale=0.2+(z+1600)/2200;
-   const blur=Math.max(0,(1.2-scale)*2);
-   c.el.style.transform=`translate(-50%, -50%) translate(${x}vw, ${y}vh) scale(${scale})`;
-   c.el.style.filter=`blur(${blur}px)`;
-   c.el.style.zIndex=Math.floor(scale*1000);
-});
-
- const glow=0.5+0.5*Math.sin(time*0.5);
- bg.style.background=`radial-gradient(circle at 50% 60%,rgba(255,255,255,${0.05+glow*0.05}),transparent 70%)`;
- requestAnimationFrame(loop);
+/* Create the 10,000 bubble data objects */
+for(let i=1;i<=TOTAL;i++){
+ data.push({id:i,photo:makePhoto(i),message:`Bubble #${i}`});
 }
 
-/* ----- Tooltip Functions ----- */
-function showTooltip(c){
- tooltipTarget=c;
- tooltip.innerHTML=c.claimed?`<strong>Capsule #${c.id}</strong><br>${c.msg}${c.url?`<br><a href="${c.url}" target="_blank">${c.url}</a>`:''}`:`Capsule #${c.id} — Empty`;
+/* Initialize background particles for subtle motion */
+for(let i=0;i<25;i++){
+ const p=document.createElement('div');
+ p.className='particle';
+ const size=1+Math.random()*3;
+ p.style.width=p.style.height=size+'px';
+ scene.appendChild(p);
+ particles.push({el:p,x:Math.random()*100,y:Math.random()*100,ampX:rand(5,20),ampY:rand(5,20),phaseX:Math.random()*Math.PI*2,phaseY:Math.random()*Math.PI*2,speedX:rand(0.05,0.15),speedY:rand(0.05,0.15),baseOpacity:0.2+Math.random()*0.3});
+}
+
+/* Create DOM elements for the foreground bubbles */
+for(let i=0;i<FRONT;i++){
+ const div=document.createElement('div');
+ div.className='bubble';
+ div.style.width='80px';
+ div.style.height='80px';
+ const img=document.createElement('img');
+ const label=document.createElement('div');
+ label.className='label';
+ div.appendChild(img);div.appendChild(label);scene.appendChild(div);
+ div.addEventListener('mouseenter',()=>showTooltip(slots[i]));
+ div.addEventListener('mouseleave',hideTooltip);
+ slots.push({el:div,img,label,progress:0,start:0,duration:0,baseX:0,baseY:0,ampX:0,ampY:0,baseZ:0,ampZ:0,phaseX:0,phaseY:0,speed:0,data:null});
+ assignBubble(slots[i]);
+}
+
+/* Assign next bubble data to a slot and randomize its motion */
+function assignBubble(slot){
+ const bubble=data[nextIndex];
+ nextIndex=(nextIndex+1)%TOTAL;
+ slot.data=bubble;
+ slot.img.src=bubble.photo;
+ slot.label.textContent=bubble.message;
+ slot.progress=0;
+ slot.start=performance.now();
+ slot.duration=15000+rand(0,10000); // 15-25s
+ // Distribute base positions across a 3x3 grid for spacing
+ const row=Math.floor(slots.indexOf(slot)/3);
+ const col=slots.indexOf(slot)%3;
+ slot.baseX=(col+0.5)*33.33+rand(-5,5); // vw
+ slot.baseY=(row+0.5)*33.33+rand(-5,5); // vh
+ slot.ampX=rand(5,15); // movement range
+ slot.ampY=rand(5,15);
+ slot.baseZ=-600;
+ slot.ampZ=600; // will move from -1200..0
+ slot.phaseX=Math.random()*Math.PI*2;
+ slot.phaseY=Math.random()*Math.PI*2;
+ slot.speed=rand(0.4,0.8); // overall speed factor
+}
+
+/* Tooltip helpers */
+function showTooltip(slot){
+ tooltip.textContent=slot.data.message;
  tooltip.style.display='block';
- const rect=c.el.getBoundingClientRect();
+ const rect=slot.el.getBoundingClientRect();
  const tipRect=tooltip.getBoundingClientRect();
- const top=rect.top-tipRect.height-8;
- const left=rect.left+(rect.width-tipRect.width)/2;
- tooltip.style.top=top+'px';
- tooltip.style.left=left+'px';
+ tooltip.style.left=rect.left+(rect.width-tipRect.width)/2+'px';
+ tooltip.style.top=rect.top-tipRect.height-8+'px';
 }
-function hideTooltip(){tooltip.style.display='none';tooltipTarget=null;}
+function hideTooltip(){tooltip.style.display='none';}
 
-/* ----- Modal Logic ----- */
-function openModal(){modal.style.display='flex';}
-function closeModal(){modal.style.display='none';form.reset();}
-function updateSelectOptions(){
- select.innerHTML='';
- capsules.filter(c=>!c.claimed).forEach(c=>{
-  const op=document.createElement('option');
-  op.value=c.id;op.textContent=c.id;select.appendChild(op);
+/* Animation loop updates bubble positions and background */
+let last=performance.now();
+function loop(now){
+ const dt=(now-last)/1000;last=now;
+ const time=now/1000;
+ // update particles
+ particles.forEach(p=>{
+  const x=p.x+Math.sin(time*p.speedX+p.phaseX)*p.ampX;
+  const y=p.y+Math.cos(time*p.speedY+p.phaseY)*p.ampY;
+  p.el.style.transform=`translate(${x}vw,${y}vh)`;
+  p.el.style.opacity=p.baseOpacity+Math.sin(time*p.speedX)*0.2;
  });
- select.disabled=select.options.length===0;
- counter.textContent=`${capsules.filter(c=>c.claimed).length} / 10000 joined`;
+ // subtle background glow
+ scene.style.background=`radial-gradient(circle at 50% 60%,rgba(255,255,255,${0.05+Math.sin(time*0.5)*0.05}),transparent 70%)`;
+ // update bubbles
+ slots.forEach(slot=>{
+  const t=(now-slot.start)*0.001*slot.speed;
+  slot.progress=t;
+  const x=slot.baseX+Math.sin(t+slot.phaseX)*slot.ampX;
+  const y=slot.baseY+Math.cos(t+slot.phaseY)*slot.ampY;
+  const z=slot.baseZ+Math.sin(t)*slot.ampZ;
+  const scale=0.3+(z+600)/600; // scale 0.3..1.3
+  slot.el.style.transform=`translate(-50%,-50%) translate3d(${x}vw,${y}vh,${z}px) scale(${scale})`;
+  slot.el.style.filter=`blur(${(1-scale)*2}px)`;
+  if(t>Math.PI*2){assignBubble(slot);} // after one full cycle, rotate bubble
+ });
+ requestAnimationFrame(loop);
 }
-function claimCapsule(e){
- e.preventDefault();
- const id=parseInt(select.value,10);
- const cap=capsules.find(c=>c.id===id);
- if(!cap||cap.claimed)return;
- cap.msg=document.getElementById('message').value.trim();
- cap.url=document.getElementById('url').value.trim();
- cap.claimed=true;
- updateSelectOptions();
- closeModal();
- if(tooltipTarget===cap)showTooltip(cap);
-}
-
-window.addEventListener('load',init);
+requestAnimationFrame(loop);
 </script>
 </body>
 </html>
