--- a/index.html
+++ b/index.html
@@ -5,135 +5,142 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>La Cápsula</title>
 <style>
-/* Reset */
-*,*:before,*:after{box-sizing:border-box;margin:0;padding:0;}
-body{font-family:'Montserrat',Arial,sans-serif;background:#000;color:#fff;overflow:hidden;}
-#scene{position:relative;width:100vw;height:100vh;perspective:800px;overflow:hidden;}
-.particle{position:absolute;border-radius:50%;background:rgba(255,255,255,0.3);pointer-events:none;}
-.bubble{position:absolute;border-radius:50%;border:1px solid rgba(255,255,255,0.8);box-shadow:inset 0 0 10px rgba(255,255,255,0.5),0 4px 10px rgba(0,0,0,0.4);overflow:hidden;transform-style:preserve-3d;}
-.bubble img{width:100%;height:100%;object-fit:cover;border-radius:50%;filter:brightness(0.9);pointer-events:none;}
-.bubble::after{content:"";position:absolute;left:15%;top:10%;width:70%;height:70%;border-radius:50%;background:radial-gradient(circle,rgba(255,255,255,0.8),rgba(255,255,255,0) 70%);pointer-events:none;}
-.label{position:absolute;bottom:5%;width:100%;text-align:center;font-size:.7rem;color:#fff;text-shadow:0 1px 2px rgba(0,0,0,0.7);pointer-events:none;}
-.tooltip{position:absolute;padding:8px 12px;background:rgba(0,0,0,0.8);border-radius:4px;font-size:.9rem;display:none;pointer-events:none;z-index:1000;}
+html,body{margin:0;padding:0;background:#000;color:#fff;height:100%;overflow:hidden;font-family:'Montserrat',Arial,sans-serif;}
+canvas{position:fixed;top:0;left:0;width:100%;height:100%;display:block;}
+.tooltip{position:fixed;background:rgba(0,0,0,0.8);color:#fff;padding:6px 10px;border-radius:4px;font-size:14px;pointer-events:none;white-space:nowrap;display:none;z-index:10}
 </style>
 </head>
 <body>
-<div id="scene"></div>
-<div class="tooltip" id="tooltip"></div>
+<canvas id="field"></canvas>
+<div id="tooltip" class="tooltip"></div>
 <script>
-const TOTAL=10000;          // total number of bubble data objects
-const FRONT=9;              // number of bubbles shown in front
-let nextIndex=0;            // pointer for next bubble data
-const data=[];              // stores all 10,000 bubble infos
-const slots=[];             // active bubbles in the DOM
-const particles=[];         // background particle effects
-const scene=document.getElementById('scene');
+const TOTAL=10000;      // total bubbles
+const FRONT=9;          // bubbles considered in the foreground
+const canvas=document.getElementById('field');
+const ctx=canvas.getContext('2d');
 const tooltip=document.getElementById('tooltip');
-
-/* Utility functions */
+let w=0,h=0;            // canvas dimensions
 const rand=(a,b)=>Math.random()*(b-a)+a;
-// generate a tiny svg data URI with unique color based on id
-function makePhoto(id){
- const hue=(id*137.5)%360;
- const svg=`<svg xmlns='http://www.w3.org/2000/svg' width='64' height='64'><defs><radialGradient id='g'><stop offset='0%' stop-color='hsl(${hue},70%,90%)'/><stop offset='100%' stop-color='hsl(${hue},70%,60%)'/></radialGradient></defs><rect width='64' height='64' fill='url(#g)'/></svg>`;
- return 'data:image/svg+xml;base64,'+btoa(svg);
+// resize canvas to fill screen
+function resize(){w=canvas.width=window.innerWidth;h=canvas.height=window.innerHeight;}
+window.addEventListener('resize',resize);resize();
+
+/* Generate bubble data. To avoid DOM overhead we store data in memory and render on canvas. */
+const bubbles=[];
+for(let y=0;y<100;y++){
+  for(let x=0;x<100;x++){
+    const id=y*100+x+1;
+    bubbles.push({
+      id,
+      hue:(id*137.5)%360,          // unique color used for "photo"
+      message:`Bubble #${id}`,
+      baseX:x+Math.random(),       // grid distribution with randomness
+      baseY:y+Math.random(),
+      baseZ:rand(-1000,-300),
+      ampX:rand(5,15),ampY:rand(5,15),ampZ:rand(200,400),
+      phaseX:rand(0,Math.PI*2),phaseY:rand(0,Math.PI*2),phaseZ:rand(0,Math.PI*2),
+      speed:rand(0.1,0.4),
+      x:0,y:0,z:0,sx:0,sy:0,scale:0,frontR:0
+    });
+  }
 }
 
-/* Create the 10,000 bubble data objects */
-for(let i=1;i<=TOTAL;i++){
- data.push({id:i,photo:makePhoto(i),message:`Bubble #${i}`});
+// subtle background particle stars
+const stars=[];
+for(let i=0;i<25;i++)stars.push({x:Math.random()*w,y:Math.random()*h,size:rand(1,3),
+  base:rand(0.1,0.3),amp:rand(0.05,0.2),phase:Math.random()*6,speed:rand(0.1,0.3)});
+
+let fronts=[]; // indices of foreground bubbles each frame
+
+// helper to insert candidate bubble into fronts array keeping z-order and avoiding overlap
+function tryAddFront(idx){
+  const b=bubbles[idx];
+  const r=b.frontR;
+  // find insertion point by depth (descending z)
+  let pos=fronts.length;
+  while(pos>0 && bubbles[fronts[pos-1]].z<b.z)pos--;
+  // overlap check with existing front bubbles
+  for(const fi of fronts){
+    const o=bubbles[fi];
+    const dx=b.sx-o.sx,dy=b.sy-o.sy;const min=r+o.frontR;
+    if(dx*dx+dy*dy<min*min)return; // overlap too much
+  }
+  fronts.splice(pos,0,idx);
+  if(fronts.length>FRONT)fronts.pop();
 }
 
-/* Initialize background particles for subtle motion */
-for(let i=0;i<25;i++){
- const p=document.createElement('div');
- p.className='particle';
- const size=1+Math.random()*3;
- p.style.width=p.style.height=size+'px';
- scene.appendChild(p);
- particles.push({el:p,x:Math.random()*100,y:Math.random()*100,ampX:rand(5,20),ampY:rand(5,20),phaseX:Math.random()*Math.PI*2,phaseY:Math.random()*Math.PI*2,speedX:rand(0.05,0.15),speedY:rand(0.05,0.15),baseOpacity:0.2+Math.random()*0.3});
-}
-
-/* Create DOM elements for the foreground bubbles */
-for(let i=0;i<FRONT;i++){
- const div=document.createElement('div');
- div.className='bubble';
- div.style.width='80px';
- div.style.height='80px';
- const img=document.createElement('img');
- const label=document.createElement('div');
- label.className='label';
- div.appendChild(img);div.appendChild(label);scene.appendChild(div);
- div.addEventListener('mouseenter',()=>showTooltip(slots[i]));
- div.addEventListener('mouseleave',hideTooltip);
- slots.push({el:div,img,label,progress:0,start:0,duration:0,baseX:0,baseY:0,ampX:0,ampY:0,baseZ:0,ampZ:0,phaseX:0,phaseY:0,speed:0,data:null});
- assignBubble(slots[i]);
-}
-
-/* Assign next bubble data to a slot and randomize its motion */
-function assignBubble(slot){
- const bubble=data[nextIndex];
- nextIndex=(nextIndex+1)%TOTAL;
- slot.data=bubble;
- slot.img.src=bubble.photo;
- slot.label.textContent=bubble.message;
- slot.progress=0;
- slot.start=performance.now();
- slot.duration=15000+rand(0,10000); // 15-25s
- // Distribute base positions across a 3x3 grid for spacing
- const row=Math.floor(slots.indexOf(slot)/3);
- const col=slots.indexOf(slot)%3;
- slot.baseX=(col+0.5)*33.33+rand(-5,5); // vw
- slot.baseY=(row+0.5)*33.33+rand(-5,5); // vh
- slot.ampX=rand(5,15); // movement range
- slot.ampY=rand(5,15);
- slot.baseZ=-600;
- slot.ampZ=600; // will move from -1200..0
- slot.phaseX=Math.random()*Math.PI*2;
- slot.phaseY=Math.random()*Math.PI*2;
- slot.speed=rand(0.4,0.8); // overall speed factor
-}
-
-/* Tooltip helpers */
-function showTooltip(slot){
- tooltip.textContent=slot.data.message;
- tooltip.style.display='block';
- const rect=slot.el.getBoundingClientRect();
- const tipRect=tooltip.getBoundingClientRect();
- tooltip.style.left=rect.left+(rect.width-tipRect.width)/2+'px';
- tooltip.style.top=rect.top-tipRect.height-8+'px';
-}
-function hideTooltip(){tooltip.style.display='none';}
-
-/* Animation loop updates bubble positions and background */
-let last=performance.now();
+let start=performance.now();
 function loop(now){
- const dt=(now-last)/1000;last=now;
- const time=now/1000;
- // update particles
- particles.forEach(p=>{
-  const x=p.x+Math.sin(time*p.speedX+p.phaseX)*p.ampX;
-  const y=p.y+Math.cos(time*p.speedY+p.phaseY)*p.ampY;
-  p.el.style.transform=`translate(${x}vw,${y}vh)`;
-  p.el.style.opacity=p.baseOpacity+Math.sin(time*p.speedX)*0.2;
- });
- // subtle background glow
- scene.style.background=`radial-gradient(circle at 50% 60%,rgba(255,255,255,${0.05+Math.sin(time*0.5)*0.05}),transparent 70%)`;
- // update bubbles
- slots.forEach(slot=>{
-  const t=(now-slot.start)*0.001*slot.speed;
-  slot.progress=t;
-  const x=slot.baseX+Math.sin(t+slot.phaseX)*slot.ampX;
-  const y=slot.baseY+Math.cos(t+slot.phaseY)*slot.ampY;
-  const z=slot.baseZ+Math.sin(t)*slot.ampZ;
-  const scale=0.3+(z+600)/600; // scale 0.3..1.3
-  slot.el.style.transform=`translate(-50%,-50%) translate3d(${x}vw,${y}vh,${z}px) scale(${scale})`;
-  slot.el.style.filter=`blur(${(1-scale)*2}px)`;
-  if(t>Math.PI*2){assignBubble(slot);} // after one full cycle, rotate bubble
- });
- requestAnimationFrame(loop);
+  const t=(now-start)/1000;
+  ctx.clearRect(0,0,w,h);
+  // animated radial background glow
+  const g=ctx.createRadialGradient(w/2,h*0.6,0,w/2,h*0.6,Math.max(w,h));
+  g.addColorStop(0,'rgba(30,30,50,'+(0.2+Math.sin(t*0.5)*0.1)+')');
+  g.addColorStop(1,'rgba(0,0,0,0)');
+  ctx.fillStyle=g;ctx.fillRect(0,0,w,h);
+  // draw drifting stars
+  for(const s of stars){
+    const op=s.base+Math.sin(t*s.speed+s.phase)*s.amp;
+    ctx.fillStyle=`rgba(200,220,255,${op})`;
+    ctx.beginPath();ctx.arc(s.x, s.y, s.size,0,Math.PI*2);ctx.fill();
+  }
+  fronts=[];
+  // update and draw far bubbles (non-front)
+  for(let i=0;i<TOTAL;i++){
+    const b=bubbles[i];
+    const tt=t*b.speed;
+    b.x=b.baseX+Math.sin(tt+b.phaseX)*b.ampX;
+    b.y=b.baseY+Math.cos(tt+b.phaseY)*b.ampY;
+    b.z=b.baseZ+Math.sin(tt+b.phaseZ)*b.ampZ;
+    b.scale=0.3+(b.z+1000)/800; // 0.3..1.55
+    b.sx=b.x/100*w;
+    b.sy=b.y/100*h;
+    b.frontR=20*b.scale; // radius if considered foreground
+    const r=4*b.scale;   // default radius for far bubbles
+    // candidate for foreground if close enough to camera
+    if(b.z>-150)tryAddFront(i);
+    // draw small distant bubble
+    ctx.fillStyle=`hsla(${b.hue},70%,70%,${0.3+b.scale*0.3})`;
+    ctx.beginPath();ctx.arc(b.sx,b.sy,r,0,Math.PI*2);ctx.fill();
+  }
+  // draw front bubbles with more detail (sorted already)
+  for(const idx of fronts){
+    const b=bubbles[idx];
+    const r=b.frontR;
+    const grad=ctx.createRadialGradient(b.sx,b.sy-r*0.6,r*0.1,b.sx,b.sy,r);
+    grad.addColorStop(0,`hsla(${b.hue},70%,95%,0.9)`);
+    grad.addColorStop(0.6,`hsla(${b.hue},70%,60%,0.7)`);
+    grad.addColorStop(1,'rgba(255,255,255,0.2)');
+    ctx.fillStyle=grad;
+    ctx.beginPath();ctx.arc(b.sx,b.sy,r,0,Math.PI*2);ctx.fill();
+    ctx.lineWidth=1;ctx.strokeStyle='rgba(255,255,255,0.8)';ctx.stroke();
+    ctx.fillStyle='#fff';
+    ctx.font=`${r*0.9}px Montserrat,Arial,sans-serif`;
+    ctx.textAlign='center';ctx.textBaseline='middle';
+    ctx.fillText(b.id,b.sx,b.sy);
+  }
+  requestAnimationFrame(loop);
 }
 requestAnimationFrame(loop);
+
+// Tooltip interaction for foreground bubbles
+canvas.addEventListener('mousemove',e=>{
+  const rect=canvas.getBoundingClientRect();
+  const x=e.clientX-rect.left,y=e.clientY-rect.top;
+  let found=null;
+  for(const idx of fronts){
+    const b=bubbles[idx];
+    const dx=x-b.sx,dy=y-b.sy;
+    if(dx*dx+dy*dy<b.frontR*b.frontR){found=b;break;}
+  }
+  if(found){
+    tooltip.textContent=found.message;
+    tooltip.style.left=(e.clientX+10)+'px';
+    tooltip.style.top=(e.clientY-20)+'px';
+    tooltip.style.display='block';
+  }else tooltip.style.display='none';
+});
+canvas.addEventListener('mouseleave',()=>tooltip.style.display='none');
 </script>
 </body>
 </html>
